corringos README.md e Index.html.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Desafio Hiring Coders #2 proposto pela @GamaAcademy o de criar uma landing page, simples para aplicarmos o conhecimento até então conhecido.">
+    <meta name="description" content="Desafio Hiring Coders #2 proposto pela @GamaAcademy o de criar uma landing page, simples para aplicarmos o conhecimento até então desenvolvido e praticado nas aulas.">
     <meta name="Jefferson Klamas" content="Desafio Hiring Coders #2 proposto pela @GamaAcademy" >
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Sexta Imperdível</title>
