Corrigndo responsividade e README.md quanto aos créditos.

--- a/index.html
+++ b/index.html
@@ -12,15 +12,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <section>
-            <div>
-               
-            </div>
-        </section>
-    </header>
    <section class="section-container background-section-one">
-       <img src="img/bg.png" alt="">
+       <img src="img/bg.png" alt="" id="bg-one">
 
        <!-- Countdown start -->
         <div id="countdown_dashboard">
@@ -51,7 +44,9 @@
 
    <section class="section-container background-section-two">
        <div class="tema">
-           Cadastre seu email para receber nossas promoções
+           <p>
+            Cadastre seu email para receber nossas promoções
+           </p>
        </div>
        
        <div class="card-container">
